# pytorch_beam_search

./: .gitattributes  .gitignore  LICENSE  README.md  Transformer.ipynb  autoregressive.py  base.py  beam_search.py  index.md  requirements.txt  rnn.ipynb  seq2seq.py  setup.cfg  utils.py
autoregressive/: index.py  models.py  search_algorithms.py
data/: 20099-8.txt  pg5614.txt  seq2seq_save.pt
examples/: README.md
examples/character_level_language_modelling/: README.md  autoregressive.ipynb  autoregressive_LSTM.ipynb  autoregressive_TransformerEncoder.ipynb  seq2seq_LSTM.ipynb  seq2seq_Transformer.ipynb
examples/character_level_language_modelling/architectures/: autoregressive_transformer.architecture  seq2seq_lstm.architecture  seq2seq_transformer.architecture
examples/language_modelling/: README.md  architectures.py  autoregressive_LSTM.ipynb  autoregressive_TransformerEncoder.ipynb  autoregressive_rnn.ipynb  language_modelling_seq2seq.py  seq2seq_LSTM.ipynb  seq2seq_Seq2SeqRNN.ipynb  seq2seq_Transformer.ipynb
examples/language_modelling_character/: autoregressive.ipynb  chess_book.txt
examples/language_modelling_word/: autoregressive.ipynb
examples/machine_translation/: seq2seq.ipynb  seq2seq_Transformer.ipynb  wmt14-de-en.ref
examples/word_level_language_modelling/: autoregressive.ipynb
models/: rnn_program.pt  save.pt  save_seq2seq.pt  seq2seq_chess.pt
seq2seq/: __init__.py  index.py  search_algorithms.py
src/pytorch_beam_search/: __init__.py
test/: autoregressive.ipynb  seq2seq.ipynb
tests/: gpt.py  transformer.py
(+20 files in other folders)
