[metadata]
name = pytorch_beam_search
version = 1.2.1
author = Juan Ramirez-Orta
author_email = jarobyte91@gmail.com
description = A simple library that implements search algorithms for sequence models written in PyTorch. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jarobyte91/pytorch_beam_search
project_urls =
    Bug Tracker = https://github.com/jarobyte91/pytorch_beam_search/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

install_requires = 
    certifi>=2020.12.5
    numpy>=1.20.3
    pandas>=1.2.4
    python-dateutil>=2.8.1
    pytz>=2021.1
    six>=1.16.0
    torch>=1.8.1
    tqdm>=4.61.0
    typing-extensions>=3.10.0.0
    nltk>=3.6.5

python_requires = >=3.6

[options.packages.find]
where = src
